--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
-skin: solarized-light
+theme: "minima"
+skin: "solarized-light"
 author: dallas borealis
 description: Notice, Collect, Share
