--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: "minima"
-skin: "solarized-light"
-author: dallas borealis
-description: Notice, Collect, Share
+theme: minima
+
+author: Dallas Borealis
+email: dallas.borealis@gmail.com
+description: >
+See/hear something; save it; share it. Oh, and Dallas Borealis is a play on the lyrics of "_Can You Picture That?_" by Dr. Teeth and the Electric Mayhem
