--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,4 @@ theme: minima
 author: Dallas Borealis
 email: dallas.borealis@gmail.com
 
-description: >
-  See/hear something; save it; share it. Oh, and Dallas Borealis is a play on the lyrics of "_Can You Picture That?_" by Dr. Teeth and the Electric Mayhem
+description: See/hear something; save it; share it. Oh, and Dallas Borealis is a play on the lyrics of "_Can You Picture That?_" by Dr. Teeth and the Electric Mayhem
