--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ remote_theme: pages-themes/minimal@v0.2.0
 author: Dallas Borealis
 email: dallas.borealis@gmail.com
 
-description: See/hear something; save it; share it. Oh, and Dallas Borealis is a play on the lyrics of "_Can You Picture That?_" by Dr. Teeth and the Electric Mayhem
+description: See/hear something; save it; share it.<br />Oh, and Dallas Borealis is a play on the lyrics of <em>"Can You Picture That?"</em> by Dr. Teeth and the Electric Mayhem
